welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:37: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	litMessage();
        ^Array2:38: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	return ch.toInt;
        ^